--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,12 @@ body{
      font-family: 'Lato', sans-serif;
 }
 
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
 .page-navbar.navbar{
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
 }
@@ -39,8 +45,8 @@ body{
     background-color: #fb5ec4;
 }
 
-.gradient{
-    background: linear-gradient(120deg, #7f70f5, #0ea0ff);
+.gradient {
+    background: linear-gradient(120deg, #00008b, #0ea0ff);
     color: #fff !important;
 }
 
